apps/services/gitea/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-tailscale
  labels:
    app: gitea
  annotations:
    tailscale.com/hostname: "gitea"
spec:
  selector:
    app: gitea
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-lan
  labels:
    app: gitea
  annotations:
    kube-vip.io/vipHost: gitea
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: gitea
  type: LoadBalancer
  loadBalancerIP: "192.168.1.142"
  loadBalancerClass: kube-vip.io/kube-vip-class
