apps/services/gitea/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  labels:
    app: gitea
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: git.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-tailscale
            port:
              name: http
  tls:
  - hosts:
    - git.gruber.dev.br
    secretName: git-tls
